[gd_scene load_steps=9 format=3 uid="uid://82aeqqi2rddp"]

[ext_resource type="Script" path="res://ui/title.gd" id="1_cscm0"]
[ext_resource type="Script" path="res://ui/ui.gd" id="1_mu34e"]
[ext_resource type="Script" path="res://ui/menu_ingame.gd" id="2_8ukki"]
[ext_resource type="Script" path="res://ui/fps.gd" id="4_kyt6h"]
[ext_resource type="Texture2D" uid="uid://l1bif7021k6f" path="res://intro_world/astroboy_sheet.png" id="5_nfftl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cb6bn"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rld3"]
atlas = ExtResource("5_nfftl")
region = Rect2(456, 398, 32, 32)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w10k3"]
bg_color = Color(0.6, 1, 0.6, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_right = 10
corner_radius_bottom_right = 10

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_mu34e")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -0.5
offset_right = 0.5
offset_bottom = 20.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "User Story 0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_cscm0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 32.0
offset_top = 24.0
offset_right = 142.0
offset_bottom = 64.0
theme_override_constants/separation = 15

[node name="LevelSelect" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Level Select"
script = ExtResource("2_8ukki")

[node name="Restart" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Restart Level"

[node name="GameLost" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.639216, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 60
text = "Game Lost!
Retrying..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="FPS" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 20.0
grow_horizontal = 0
text = "000 FPS"
horizontal_alignment = 2
script = ExtResource("4_kyt6h")

[node name="ActivePic" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_right = -91.0
offset_bottom = 20.0
grow_horizontal = 0
text = "nobody"
horizontal_alignment = 2

[node name="LowerContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_top = 64.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="LowerContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="LowerContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Label" type="Label" parent="LowerContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_cb6bn")
text = "Estalvi DrBack"

[node name="TextureRect" type="TextureRect" parent="LowerContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_7rld3")
stretch_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="LowerContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/fill = SubResource("StyleBoxFlat_w10k3")
value = 50.0
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="LowerContainer/HBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LowerContainer/HBoxContainer/ProgressBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
text = "10000 â‚¬"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Control2" type="Control" parent="LowerContainer/HBoxContainer/ProgressBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Control2" type="Control" parent="LowerContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[connection signal="pressed" from="HBoxContainer/LevelSelect" to="HBoxContainer/LevelSelect" method="_on_pressed"]
[connection signal="pressed" from="HBoxContainer/Restart" to="." method="_on_restart_pressed"]
